URLS para obtener lista de profesores y funcionarios

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -26,7 +26,7 @@ info_log = APPLICATION_PATH "/../logs/info-log"
 resources.db.adapter = "pdo_pgsql"
 resources.db.params.username = "admin"
 resources.db.params.host = "localhost"
-rt = "5432"
+resources.db.params.port = "5432"
 resources.db.params.dbname = "asistenciaUCA"
 resources.db.params.password = "admin"
 resources.db.isDefaultTableAdapter = true
