Added timepicker y datepicker

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -24,11 +24,11 @@ info_log = APPLICATION_PATH "/../logs/info-log"
 
 ;DataBase Resources
 resources.db.adapter = "pdo_pgsql"
-resources.db.params.username = "admin"
+resources.db.params.username = "postgres"
 resources.db.params.host = "localhost"
 resources.db.params.port = "5432"
 resources.db.params.dbname = "asistenciaUCA"
-resources.db.params.password = "admin"
+resources.db.params.password = "postgres"
 resources.db.isDefaultTableAdapter = true
 resources.db.params.poerror_log = APPLICATION_PATH "/../logs/error-log"
 
